# espigue

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  wheels.yml
crates/alzina-core/: Cargo.toml
crates/alzina-core/src/: audit.rs  bootstrap.rs  channel.rs  composition.rs  config.rs  display.rs  domain_registry.rs  engagement.rs  error.rs  event.rs  hooks.rs  identity.rs  learnings_parser.rs  lib.rs  memory_types.rs  message.rs  quality.rs  search.rs  session.rs  templates.rs  tiers.rs  workspace.rs
crates/alzina-core/src/tools/: compaction.rs  compaction_rules.json  mod.rs  result_budget.rs  timeout.rs  types.rs  url_guard.rs
crates/alzina-orchestration/: Cargo.toml
crates/alzina-orchestration/src/: engine.rs  executor.rs  lib.rs  seam_tools.rs  signals.rs  test_helpers.rs  tool_adapter.rs
crates/alzina-orchestration/src/adapter/: conservation.rs  mod.rs  tests.rs
crates/alzina-orchestration/src/composition/: compiler.rs  leaf_hook.rs  mod.rs
crates/alzina-orchestration/src/composition/edges/: loop_edge.rs  mod.rs
crates/alzina-orchestration/src/composition/nodes/: fanout_node.rs  gate_node.rs  join_node.rs  mod.rs  router_node.rs  spawn_node.rs  synthesis_node.rs
crates/alzina-orchestration/src/composition/parser/: ast.rs  errors.rs  mod.rs  render.rs  scope.rs  tokenizer.rs
crates/alzina-orchestration/src/quality/: envelope_gate.rs  mod.rs
crates/alzina-orchestration/src/runner/: alzina_runner.rs  assigned_dirs.rs  claude_agent_sdk.rs  envelope_tool.rs  mod.rs  model_resolver.rs  sidecar_handle.rs  sidecar_protocol.rs  stop_conditions.rs  tool_interceptor.rs
crates/alzina-orchestration/src/session/: hierarchy.rs  mod.rs  sqlite_session_service.rs
crates/alzina-orchestration/src/ttd/: artifact.rs  config.rs  emit.rs  engine.rs  fitness.rs  guards.rs  mod.rs  mod_types.rs  personas.rs  plan.rs  post_process.rs  retrieval.rs  run.rs  sampling.rs  state.rs  term_sheet.rs
crates/alzina-orchestration/src/ttd/prompts/: graph.rs  lit_review.rs  mod.rs  render.rs  synthesis.rs
crates/alzina-orchestration/src/ttd/stages/: graph.rs  mod.rs  narrative.rs  synthesis.rs
crates/alzina-search/: Cargo.toml
crates/alzina-search/examples/: backfill_authors.rs  backfill_credibility.rs
crates/alzina-search/src/: arxiv.rs  backfill.rs  bib_store.rs  chunking.rs  credibility.rs  embed_cache.rs  hybrid.rs  indexer.rs  jina.rs  kb_index.rs  lib.rs  lit_explore.rs  lit_fusion.rs  lit_intake.rs  lit_schema.rs  manifest.rs  pdf_fetch.rs  qdrant_migration.rs  quality.rs  rerank.rs  s2_enrichment.rs  schema.rs  sqlite_vec.rs  watcher.rs
crates/alzina-search/tests/: kb_round_trip.rs  lit_vec_bench.rs
crates/base/: Cargo.toml
crates/base/src/: envelope.rs  error.rs  event.rs  identity.rs  lib.rs  search.rs
crates/cli/: Cargo.toml  README.md  pyproject.toml
crates/cli/examples/: live_smoke.rs  spike.rs
crates/cli/src/: lib.rs  main.rs  pipeline.rs
crates/cli/src/openrouter/: embeddings.rs  executor.rs
crates/espigue/: .gitignore  Cargo.toml  README.md
crates/espigue/examples/: live_smoke.rs  spike.rs
crates/espigue/src/: context.rs  ingest.rs  lib.rs  main.rs  pipeline.rs  seed.rs
crates/espigue/src/openrouter/: embeddings.rs  mod.rs  rerank.rs
crates/litreview-cli/: Cargo.toml  README.md
crates/litreview-cli/examples/: live_smoke.rs  spike.rs
crates/litreview-cli/src/: context.rs  ingest.rs  main.rs  pipeline.rs  seed.rs
crates/litreview-cli/src/openrouter/: embeddings.rs  executor.rs  mod.rs  rerank.rs
crates/orchestration/: Cargo.toml
crates/orchestration/src/: executor.rs  lib.rs
crates/orchestration/src/adapter/: conservation.rs  mod.rs  tests.rs
crates/orchestration/src/ttd/: artifact.rs  citations.rs  emit.rs  engine.rs  fitness.rs  guards.rs  mod.rs  mod_types.rs  plan.rs  post_process.rs  retrieval.rs  run.rs  state.rs  weights.rs
crates/orchestration/src/ttd/prompts/: lit_review.rs  narrative.rs
crates/orchestration/src/ttd/stages/: graph.rs  narrative.rs  synthesis.rs
crates/search/: Cargo.toml
crates/search/examples/: backfill_authors.rs  backfill_credibility.rs
crates/search/src/: arxiv.rs  bib_store.rs  embed_cache.rs  jina.rs  lib.rs  lit_chunking.rs  lit_explore.rs  lit_fusion.rs  lit_gateway.rs  lit_intake.rs  lit_schema.rs  pdf_fetch.rs  quality.rs  rerank.rs  s2_enrichment.rs  schema.rs  sqlite_vec.rs
crates/search/tests/: lit_vec_bench.rs
examples/reviews/: README.md  communication-coordination.md  communication-coordination.synthesis.yaml  failure-robustness.md  failure-robustness.synthesis.yaml  negotiation-conflict.md  negotiation-conflict.synthesis.yaml  roles-specialization.md  roles-specialization.synthesis.yaml  shared-memory-state.md  shared-memory-state.synthesis.yaml
