[workspace]
resolver = "2"
members = [
    "crates/base",
    "crates/search",
    "crates/orchestration",
    "crates/espigue",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
publish = false

[workspace.dependencies]
# Internal crates (vendored into this standalone repo). The literature path
# only — the daemon/runner/governance/memory/workspace crates are NOT vendored;
# the `runner` (orchestration) and `kb` (search) features that depended on them
# are stripped here.
base = { path = "crates/base" }

# External dependencies
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
minijinja = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
serde_yaml = "0.9"
quick-xml = "0.31"
tempfile = "3"
tokio-util = { version = "0.7", features = ["rt"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10"
rand = "0.8"
