[package]
name = "alzina-core"
version.workspace = true
edition.workspace = true
publish = false
description = "Shared types, error taxonomy, and trait definitions for the Alzina runtime"

[features]
# Enables test-only helpers (e.g. ScopedEnvelope::bare) in non-test builds
# such as integration test binaries that cannot use `#[cfg(test)]`.
# Never enable in production code.
test-harness = []

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
minijinja = { workspace = true }
# Runtime dep added for CR-01: `tools::url_guard::resolve_host_ips` wraps
# its blocking stdlib DNS call in `tokio::task::spawn_blocking` so it does
# not stall the calling executor's worker thread. The `rt` feature alone
# is enough to get `spawn_blocking`; no full runtime is started here.
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
