[package]
name = "alzina-orchestration"
version.workspace = true
edition.workspace = true
publish = false
description = "Test-time-diffusion literature-synthesis engine (TTD + adapter)"

# NOTE (standalone extraction): this is the literature-only slice of the
# original crate. The `runner` runtime (agent dispatch, composition, sessions,
# governance/memory/workspace integration, the ADK sidecar) is NOT vendored —
# its modules stay behind `#[cfg(feature = "runner")]` and never compile here.
# Only the TTD synthesis engine + adapter that litreview-cli uses are active.

[dependencies]
alzina-core = { workspace = true }
# Literature search path only (default-features=false drops the `kb` feature).
alzina-search = { path = "../alzina-search", default-features = false }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
quick-xml = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
futures = "0.3"

[features]
# The standalone repo ships only the TTD engine. `runner` is a stub: the
# runtime it gated is not vendored, so enabling it will not compile. Kept as a
# declared (always-off) feature so `#[cfg(feature = "runner")]` stays a known
# cfg rather than an "unexpected cfg" warning.
default = []
runner = []
test-harness = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
tempfile.workspace = true
reqwest = { workspace = true }
