[package]
name = "cli"
version.workspace = true
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Standalone literature-review synthesis CLI (OpenRouter-backed)"

[[bin]]
name = "gna"
path = "src/main.rs"

[dependencies]
# The standalone TTD synthesis engine — no runner/governance/adk/sidecar.
orchestration = { path = "../orchestration" }
# Literature-synthesis search path only — no alzina-memory/alzina-workspace.
search = { path = "../search" }
base = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full", "test-util"] }
