[package]
name = "litreview-cli"
version.workspace = true
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Standalone literature-review synthesis CLI (OpenRouter-backed)"

[[bin]]
name = "litreview"
path = "src/main.rs"

[dependencies]
# The standalone TTD synthesis engine — no runner/governance/adk/sidecar.
# Direct path dep (not workspace-inherited) so default-features can be disabled.
alzina-orchestration = { path = "../alzina-orchestration", default-features = false }
# default-features=false drops the `kb` feature → no alzina-memory/alzina-workspace.
# Direct path dep because workspace inheritance cannot disable default features.
alzina-search = { path = "../alzina-search", default-features = false }
alzina-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full", "test-util"] }
