[package]
name = "orchestration"
version.workspace = true
edition.workspace = true
publish = false
description = "Test-time-diffusion literature-synthesis engine (TTD + adapter)"

# NOTE (standalone extraction): this is the literature-only slice of the
# original crate — the TTD synthesis engine + adapter that cli uses.
# The `runner` runtime (agent dispatch, composition, sessions, governance/
# memory/workspace integration, the ADK sidecar) was never vendored and its
# always-off `#[cfg(feature = "runner")]` modules have been removed.

[dependencies]
base = { workspace = true }
# Literature search path only (default-features=false drops the `kb` feature).
search = { path = "../search", default-features = false }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
quick-xml = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
tempfile.workspace = true
reqwest = { workspace = true }
